--- a/package.json
+++ b/package.json
@@ -29,10 +29,9 @@
     "typescript": "^4.2.3"
   },
   "scripts": {
-    "start:dev": "nodemon",
     "dev:server": "nodemon",
-    "dev:client": "cd frontend/ && npm run start",
-    "install:client": "cd frontend/ && npm install",
+    "dev:client": "cd react-ui/ && npm run start",
+    "install:client": "cd react-ui/ && npm install",
     "install:server": "npm install"
   },
   "keywords": [],
