--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@snowpack/plugin-react-refresh": "^2.4.0",
     "@snowpack/plugin-typescript": "^1.2.1",
+    "@types/reach__router": "^1.3.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "snowpack": "^3.0.1",
@@ -14,6 +15,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.11",
+    "@reach/router": "^1.3.4",
     "@types/styled-components": "^5.1.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
