--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "apollo-server": "^2.21.1",
     "apollo-server-express": "^2.21.1",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1"
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@prisma/cli": "2.12.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
