--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -7,19 +7,19 @@
   "devDependencies": {
     "@snowpack/plugin-react-refresh": "^2.4.0",
     "@snowpack/plugin-typescript": "^1.2.1",
-    "@types/reach__router": "^1.3.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "@types/react-router-dom": "^5.1.7",
     "snowpack": "^3.0.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
     "@apollo/client": "^3.3.11",
-    "@reach/router": "^1.3.4",
     "@types/styled-components": "^5.1.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
+    "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1"
   }
 }
