--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
     "react-router-dom": "^5.2.0",
+    "react-spring": "^9.0.0",
     "styled-components": "^5.2.1"
   }
 }
