feature (frontend): added typings file and included logo in header

--- a/react-ui/tsconfig.json
+++ b/react-ui/tsconfig.json
@@ -5,7 +5,8 @@
     "lib": ["ES2015", "ESNext", "DOM"],
     "strictNullChecks": true,
     "esModuleInterop": true,
-    "noEmitOnError": true
+    "noEmitOnError": true,
+    "typeRoots": ["./src/typings", "./node_modules/@types"]
   },
   "include": ["./src/**/*"]
 }
