--- a/package.json
+++ b/package.json
@@ -4,31 +4,31 @@
   "description": "",
   "main": "prisma/index.ts",
   "dependencies": {
-    "@prisma/client": "^2.29.0",
-    "apollo-server": "^3.4.0",
-    "apollo-server-express": "^3.4.0",
+    "@prisma/client": "^3.7.0",
+    "apollo-server": "^3.6.1",
+    "apollo-server-express": "^3.6.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "graphql": "^15.5.1",
+    "express": "^4.17.2",
+    "graphql": "^15.7.0",
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
-    "@prisma/cli": "2.12.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.5",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "eslint": "^8.1.0",
-    "eslint-config-airbnb-typescript": "^14.0.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "nodemon": "^2.0.14",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "nodemon": "^2.0.15",
+    "prisma": "^3.7.0",
     "ts-node": "^10.4.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "dev:server": "nodemon",
