--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -20,6 +20,7 @@
     "react-feather": "^2.0.9",
     "react-router-dom": "^6.2.1",
     "react-spring": "^9.4.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "zustand": "^3.6.9"
   }
 }
