--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -5,6 +5,7 @@
     "test": "echo \"This template does not include a test runner by default.\" && exit 1"
   },
   "devDependencies": {
+    "@snowpack/plugin-dotenv": "^2.2.0",
     "@snowpack/plugin-react-refresh": "^2.5.0",
     "@snowpack/plugin-typescript": "^1.2.1",
     "@types/react": "^17.0.38",
@@ -15,6 +16,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.8",
     "@types/styled-components": "^5.1.21",
+    "dotenv": "^16.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
