--- a/gcp/cloud-functions/package.json
+++ b/gcp/cloud-functions/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "functions-framework --source=./rate-limit --target=rateLimit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@google-cloud/firestore": "^5.0.2"
+  },
+  "devDependencies": {
+    "@google-cloud/functions-framework": "^3.1.0"
   }
 }
