--- a/gcp/cloud-functions/package.json
+++ b/gcp/cloud-functions/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/firestore": "^5.0.2"
+    "@google-cloud/firestore": "^5.0.2",
+    "isomorphic-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@google-cloud/functions-framework": "^3.1.0"
