--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -1,21 +1,19 @@
 {
   "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build",
+    "dev": "vite",
+    "preview": "vite preview",
+    "build": "tsc && vite build",
     "test": "echo \"This template does not include a test runner by default.\" && exit 1"
   },
   "devDependencies": {
-    "@snowpack/plugin-dotenv": "^2.2.0",
-    "@snowpack/plugin-react-refresh": "^2.5.0",
-    "@snowpack/plugin-typescript": "^1.2.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "snowpack": "^3.8.8",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@types/styled-components": "^5.1.25",
+    "@vitejs/plugin-react": "^2.0.0",
     "dotenv": "^16.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +21,7 @@
     "react-router-dom": "^6.3.0",
     "react-spring": "^9.4.5",
     "styled-components": "^5.3.5",
+    "vite": "^3.0.0",
     "zustand": "^3.7.2"
   }
 }
