--- a/react-ui/tsconfig.json
+++ b/react-ui/tsconfig.json
@@ -1,12 +1,24 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "jsx": "react",
-    "lib": ["ES2015", "ESNext", "DOM"],
+    "target": "ESNext",
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "strictNullChecks": true,
-    "esModuleInterop": true,
     "noEmitOnError": true,
-    "typeRoots": ["./src/typings", "./node_modules/@types"]
+    "typeRoots": ["./src/typings", "./node_modules/@types"],
+    "useDefineForClassFields": true,
+    "allowJs": false,
+    "skipLibCheck": true,
+    "esModuleInterop": false,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx"
   },
   "include": ["./src/**/*"]
 }
