feat : rework of cloud functions

--- a/gcp/cloud-functions/create-account/package.json
+++ b/gcp/cloud-functions/create-account/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cloud-functions",
+  "name": "envite_cloud-function_account-creation",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
