--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "server/index.ts",
   "dependencies": {
-    "@prisma/client": "^3.11.1",
-    "apollo-server": "^3.6.7",
-    "apollo-server-express": "^3.6.7",
+    "@prisma/client": "4.3.1",
+    "apollo-server": "^3.10.2",
+    "apollo-server-express": "^3.10.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "express": "^4.17.3",
-    "graphql": "^15.8.0",
+    "express": "^4.18.1",
+    "graphql": "15.8.0",
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
@@ -26,7 +26,7 @@
     "eslint-plugin-react": "^7.31.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "nodemon": "^2.0.19",
-    "prisma": "^3.11.1",
+    "prisma": "4.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
