--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -9,10 +9,12 @@
   "devDependencies": {
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "sass": "^1.57.1",
     "typescript": "^4.8.2"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@react-spring/web": "^9.6.1",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.0.1",
     "dotenv": "^16.0.2",
@@ -20,7 +22,6 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-router-dom": "^6.3.0",
-    "react-spring": "^9.5.2",
     "styled-components": "^5.3.5",
     "vite": "^3.0.9",
     "zustand": "^4.1.1"
