--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server/index.ts",
   "dependencies": {
-    "@prisma/client": "4.7.1",
+    "@prisma/client": "4.9.0",
     "apollo-server": "^3.11.1",
     "apollo-server-express": "^3.11.1",
     "bcrypt": "^5.1.0",
@@ -26,7 +26,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "nodemon": "^2.0.20",
-    "prisma": "4.7.1",
+    "prisma": "4.9.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
@@ -36,7 +36,7 @@
     "install:client": "npm install --prefix ./react-ui",
     "install:server": "npm install",
     "build:client": "npm run build --prefix ./react-ui",
-    "build:server": "tsc --project server/tsconfig.json && cp ./server/schema.graphql ./server/build/schema.graphql",
+    "build:server": "npx prisma generate && tsc --project server/tsconfig.json && cp ./server/schema.graphql ./server/build/schema.graphql",
     "start:server": "node server/build/index.js"
   },
   "keywords": [],
