--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "main": "server/index.ts",
   "dependencies": {
     "@prisma/client": "4.9.0",
-    "apollo-server": "^3.11.1",
-    "apollo-server-express": "^3.11.1",
-    "bcrypt": "^5.1.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "apollo-server": "3.13.0",
+    "apollo-server-express": "3.13.0",
+    "bcrypt": "5.1.1",
+    "cors": "2.8.5",
+    "express": "4.21.1",
     "graphql": "15.8.0",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "9.0.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.13",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.14",
-    "@types/jsonwebtoken": "^8.5.9",
+    "@types/jsonwebtoken": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "eslint": "^8.29.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -25,10 +25,10 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "nodemon": "^2.0.20",
+    "nodemon": "3.1.7",
     "prisma": "4.9.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "ts-node": "10.9.2",
+    "typescript": "5.6.3"
   },
   "scripts": {
     "dev:client": "npm run dev --prefix ./react-ui",
