--- a/.eslintrc
+++ b/.eslintrc
@@ -1,39 +1,201 @@
 {
-  "extends": ["airbnb-typescript/base"],
+  "extends": [
+    "airbnb-typescript/base"
+  ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "import"],
+  "plugins": [
+    "@typescript-eslint",
+    "eslint-plugin-prettier",
+    "import"
+  ],
   "rules": {
     "@typescript-eslint/indent": "off",
     "@typescript-eslint/no-use-before-define": 0,
+    "@typescript-eslint/explicit-function-return-type": [
+      "warn",
+      {
+        "allowExpressions": true,
+        "allowConciseArrowFunctionExpressionsStartingWithVoid": true
+      }
+    ],
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_"
+      }
+    ],
+    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/consistent-type-definitions": [
+      "error",
+      "interface"
+    ],
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/member-delimiter-style": [
+      "error",
+      {
+        "multiline": {
+          "delimiter": "semi",
+          "requireLast": true
+        },
+        "singleline": {
+          "delimiter": "semi",
+          "requireLast": false
+        }
+      }
+    ],
+    "import/prefer-default-export": "off",
+    "import/extensions": [
+      "error",
+      "never",
+      {
+        "js": "never",
+        "ts": "never",
+        "tsx": "never",
+        "jsx": "never"
+      }
+    ],
+    "import/order": [
+      "error",
+      {
+        "groups": [
+          [
+            "builtin",
+            "external",
+            "internal"
+          ],
+          [
+            "parent",
+            "sibling",
+            "index"
+          ]
+        ],
+        "newlines-between": "always"
+      }
+    ],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": [
+          "**/*.test.ts",
+          "**/*.spec.ts",
+          "**/test/**",
+          "**/__tests__/**"
+        ]
+      }
+    ],
     "linebreak-style": 0,
     "object-curly-newline": 0,
     "object-property-newline": 0,
     "no-console": 0,
     "implicit-arrow-linebreak": 0,
     "function-paren-newline": 0,
-    "import/prefer-default-export": "off",
     "indent": "off",
     "no-use-before-define": "off",
     "arrow-body-style": "off",
     "no-unused-vars": "error",
-    "import/extensions": ["error", "never", { "js": "never", "ts": "never", "tsx": "never", "jsx": "never" }]
+    "no-debugger": "warn",
+    "prefer-const": "error",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+    "complexity": [
+      "warn",
+      {
+        "max": 10
+      }
+    ],
+    "max-lines": [
+      "warn",
+      {
+        "max": 300,
+        "skipBlankLines": true,
+        "skipComments": true
+      }
+    ],
+    "max-lines-per-function": [
+      "warn",
+      {
+        "max": 50,
+        "skipBlankLines": true,
+        "skipComments": true
+      }
+    ],
+    "max-depth": [
+      "warn",
+      4
+    ],
+    "no-multiple-empty-lines": [
+      "error",
+      {
+        "max": 1
+      }
+    ],
+    "no-trailing-spaces": "error",
+    "newline-before-return": "error",
+    "lines-between-class-members": [
+      "error",
+      "always",
+      {
+        "exceptAfterSingleLine": true
+      }
+    ],
+    "arrow-parens": [
+      "error",
+      "always"
+    ],
+    "curly": [
+      "error",
+      "all"
+    ],
+    "eqeqeq": [
+      "error",
+      "always"
+    ],
+    "dot-notation": "error"
   },
   "overrides": [
     {
       // Override for the "react-ui" project
-      "files": ["react-ui/**/*.{ts,tsx}"],
+      "files": [
+        "react-ui/**/*.{ts,tsx}"
+      ],
       "parserOptions": {
-        "project": ["./react-ui/tsconfig.json"]
+        "project": [
+          "./react-ui/tsconfig.json"
+        ]
       },
       "rules": {
-        // React-specific ESLint rules or TypeScript rules can go here
+        "max-lines-per-function": "off"
+      }
+    },
+    {
+      // Override for UI React components
+      "files": [
+        "react-ui/**/*.{tsx}"
+      ],
+      "parserOptions": {
+        "project": [
+          "./react-ui/tsconfig.json"
+        ]
+      },
+      "rules": {
+        "max-lines-per-function": "off",
+        "@typescript-eslint/explicit-function-return-type": "off"
       }
     },
     {
       // Override for the "server" project
-      "files": ["server/**/*.{ts,js}"],
+      "files": [
+        "server/**/*.{ts,js}"
+      ],
       "parserOptions": {
-        "project": ["./server/tsconfig.json"]
+        "project": [
+          "./server/tsconfig.json"
+        ]
       },
       "rules": {
         // Server-specific ESLint or TypeScript rules can go here
