--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server/index.ts",
   "dependencies": {
-    "@prisma/client": "4.9.0",
+    "@prisma/client": "5.21.1",
     "apollo-server": "3.13.0",
     "apollo-server-express": "3.13.0",
     "bcrypt": "5.1.1",
@@ -21,14 +21,16 @@
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "eslint": "^8.29.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "nodemon": "3.1.7",
-    "prisma": "4.9.0",
+    "prisma": "5.21.1",
     "ts-node": "10.9.2",
-    "typescript": "5.6.3"
+    "typescript": "^4.9.0"
   },
   "scripts": {
     "dev:client": "npm run dev --prefix ./react-ui",
@@ -38,7 +40,8 @@
     "build:client": "npm run build --prefix ./react-ui",
     "build:server": "npx prisma generate && tsc --project server/tsconfig.json && cp ./server/schema.graphql ./server/build/schema.graphql",
     "start:server": "node server/build/index.js",
-    "db:push": "prisma db push"
+    "db:push": "prisma db push",
+    "prisma:generate": "prisma generate"
   },
   "keywords": [],
   "author": "Simeon Zimmermann - SZ WEB DEVELOPMENT",
