--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "@prisma/client": "5.21.1",
     "apollo-server": "3.13.0",
     "apollo-server-express": "3.13.0",
-    "bcrypt": "5.1.1",
+    "argon2": "^0.41.1",
     "cors": "2.8.5",
     "express": "4.21.1",
     "graphql": "15.8.0",
     "jsonwebtoken": "9.0.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^9.0.7",
