chore(general): rename folders

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "build:client": "npm run build --prefix ./react-ui",
     "build:server": "npx prisma generate && tsc --project server/tsconfig.json && cp ./server/schema.graphql ./server/build/schema.graphql",
     "start:server": "node server/build/index.js",
-    "db:push": "prisma db push",
+    "db:push": "prisma docker push",
     "prisma:generate": "prisma generate"
   },
   "keywords": [],
