--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,13 @@
 {
+  "printWidth": 140,
   "singleQuote": true,
-  "trailingComma": "all",
-  "printWidth": 140
+  "tabWidth": 4,
+  "useTabs": true,
+  "trailingComma": "es5",
+  "semi": true,
+  "bracketSpacing": true,
+  "endOfLine": "lf",
+  "bracketSameLine": true,
+  "arrowParens": "avoid",
+  "proseWrap": "never"
 }
