--- a/package.json
+++ b/package.json
@@ -20,10 +20,8 @@
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "eslint": "^8.29.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "nodemon": "3.1.7",
@@ -33,7 +31,7 @@
   },
   "scripts": {
     "dev:client": "npm run dev --prefix ./react-ui",
-    "dev:server": "nodemon",
+    "dev:server": "npm dedup && nodemon",
     "install:client": "npm install --prefix ./react-ui",
     "install:server": "npm install",
     "build:client": "npm run build --prefix ./react-ui",
